--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
   rel="stylesheet"
 />
+<link rel="preload" href="path-to-critical-font.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INTERCOXTMOH</title>
   </head>
